--- a/css-web/main.css
+++ b/css-web/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
 }
 
@@ -11,7 +11,7 @@ body {
   background: url("./images/freedom.jpg");
   width: 100%;
   height: 528px;
-  padding: 10px;
+  padding: 10px;   
 }
 
 .section-title {
@@ -20,7 +20,7 @@ body {
 
 #product-overview h1 {
   color: white;
-  font-family: "Anton", sans-serif;
+  font-family: 'Anton', sans-serif;
 }
 
 /* h1 {
@@ -71,21 +71,21 @@ body {
 }
 
 .main-nav__item a:hover,
-.main-nav__item a:active{
-   color:white;
-   border-bottom:5px solid white;
+.main-nav__item a:active {
+  color: white;
+  border-bottom: 5px solid white;
 }
 
-.main-nav__item--cta a{
-  color:white;
-  background:#ff1b68;
+.main-nav__item--cta a {
+  color: white;
+  background: #ff1b68;
   padding: 8px 16px;
-  border-radius:8px;
+  border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
-.main-nav__item--cta a:active{
-  color:#ff1b68;
-  background:white;
-  border:none;
+.main-nav__item--cta a:active {
+  color: #ff1b68;
+  background: white;
+  border: none;
 }
